Bump to Java 11 and migrate to System.Logger from SLF4J-API